# cv-study

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: README.md
notebooks/01_object_detection/: 01_yolo_basics.ipynb
notebooks/02_vlm/: 01_clip_basics.ipynb
notebooks/hf_agent_course/: ch1 intro to agents.ipynb
notebooks/hf_tutorial/: ch1-1.ipynb  ch1-2.ipynb  ch1-3.ipynb
src/cv_pkg/: __init__.py
src/cv_pkg/utils/: __init__.py  data.py  visualization.py
tutorials/hf_tutorial(chatgpt)/: part_0_orientation_env.md  part_1_hf_ecosystem.md  part_2_vision_ai.md  part_3_vlm.md  part_4_sllm.md  part_5_rag.md  part_6_agent.md  part_7_production.md  part_8_capstone.md
tutorials/hf_tutorial(claude)/: cc.md  ch1-1.md  ch1-2.md  ch2-1.md  ch2-2.md  ch3-1.md  ch3-2.md  ch4-1.md  ch4-2.md  ch4-3.md  ch5-1.md  ch5-2.md  ch5-3.md  ch6-1.md  ch6-2.md
