[project]
name = "cv-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.8.0",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pillow>=10.0.0",
    "python-dotenv>=1.2.1",
    "superb-ai-cli>=0.1.2",
    "superb-ai-curate>=1.5.0",
    "superb-ai-label>=0.22.2",
    "timm>=1.0.24",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "ultralytics>=8.4.8",
]
